Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3087

Bad handling of invalid queue arguments

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.9
    • C++ Broker, C++ Tools
    • None

    Description

      Passing bad arguments to queue-declare (e.g. max-count=3.14 or max-size='foo') currently results in those arguments being ignored, but being reported from queue-query or via qmf as they were originally specified. There is a further problem with qpid-config in these cases where it fails due to attempts to convert these values to integers and therefore does not list all queues.

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: